# Argus

./: '  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  todo.md
Backend/: CMakeLists.txt
Backend/include/: DataParser.hpp  HttpsClient.hpp  HttpsTask.hpp  MasterOrderBookManager.hpp  OrderBookManager.hpp  SafeQueue.hpp  WebSocket.hpp
Backend/src/: DataParser.cpp  DataParser.cpp~  HttpsClient.cpp  MasterOrderBookManager.cpp  OrderBookManager.cpp  WebSocket.cpp  main.cpp
GUI/: CMakeLists.txt  build_and_run.bat  build_glfw.bat
GUI/App/: CMakeLists.txt
GUI/App/include/: .Ticker.hpp.swp  App.hpp  Candle.hpp  Chart.hpp  OrderBook.hpp  Ticker.hpp  Trades.hpp  Utils.hpp  Widget.hpp
GUI/App/src/: .App.cpp.swp  .Chart.cpp.swp  .OrderBook.cpp.swp  .Ticker.cpp.swp  .Trades.cpp.swp  App.cpp  Chart.cpp  OrderBook.cpp  Ticker.cpp  Trades.cpp
GUI/include/: Alerts.hpp  App.hpp  App.hpp~  App.hpz~  Chart.hpp  Chart.hpp~  Colors.hpp  JsonBuilder.hpp  OrderBook.hpp  Ticker.hpp  Trade.hpp  Trades.hpp  Utils.hpp  Widget.hpp
GUI/src/: Alerts.cpp  App.cpp  Chart.cpp  Chart.cpp~  JsonBuilder.cpp  OrderBook.cpp  OrderBook.cpz~  Ticker.cpp  Trades.cpp  Trades.cpz~  main.cpp
OB/: MasterOrderBookManager.cpp
common/include/: Alert.hpp  AlertsManager.hpp  AlertsManager.hpz~  BookSnapshot.hpp  BookUpdate.hpp  Candle.hpp  ConnectionState.hpp  DataStore.hpp  DataStore.hpp~  EventBus.hpp  HistoricalCandles.hpp  IEvent.hpp  Level1.hpp  OrderBookManager.hpp  PlaySoundWrapper.hpp  SubscriptionManager.hpp  SubscriptionRequest.hpp  Trade.hpp  Utils.hpp
common/src/: AlertsManager.cpp  ConnectionState.cpp  DataStore.cpp  EventBus.cpp  OrderBookManager.cpp  SubscriptionManager.cpp
